--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sequelize": "^6.34.0"
+    "sequelize": "^6.34.0",
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
