--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
     "sequelize": "^6.34.0",
     "smoothscroll-polyfill": "^0.4.4"
   },
